--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 /* Site Wide */
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #21314D;
     color: #DCDCDC;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: "Noto Sans", sans-serif;
+}
+
+p {
+    font-family: "Lato", sans-serif;
+    color: #8d99ae;
 }
 
 .highlight {
@@ -10,14 +19,9 @@ body {
 }
 
 /* Navigation Bar */
-.fa-bars {
-    color: #DCDCDC;
-    font-size: 30px;
-}
-
 .fab {
     color: #DCDCDC;
-    font-size: 25px;
+    font-size: 30px;
     padding-right: 10px;
     transition: all 0.5s;
 }
@@ -25,6 +29,12 @@ body {
 .fab:hover {
     color: #D2492A;
     transform: scale(1.3);
+}
+
+.navbar {
+    background-color: #21314D;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .navbar-toggler {
@@ -77,6 +87,7 @@ body {
 .nav-link {
     color: #DCDCDC !important;
     transition: all 0.5s;
+    font-size: 18px;
 }
 
 .nav-link:hover {
@@ -86,17 +97,82 @@ body {
 
 /* Intro */
 #intro {
-    border: red solid;
-    width: 100%;
-    height: 100%;
-    padding-top: 100px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#intro h1 {
+    line-height: 50px;
+}
+
+#intro h1 span {
+    color: #8d99ae;
+}
+
+@media (min-width: 200px) {
+#intro h1 {
+    font-size: 35px;
+}
+#intro h1 span {
+    font-size: 20px;
+}
+}
+
+@media (min-width: 400px) {
+#intro h1 {
+    font-size: 40px;
+}
+#intro h1 span {
+    font-size: 23px;
+}
+}
+
+@media (min-width: 600px) {
+#intro h1 {
+    font-size: 55px;
+}
+#intro h1 span {
+    font-size: 25px;
+}
+}
+
+@media (min-width: 800px) {
+#intro h1 {
+    font-size: 65px;
+}
+#intro h1 span {
+    font-size: 28px;
+}
+}
+
+@media (min-width: 1000px) {
+#intro h1 {
+    font-size: 75px;
+}
+#intro h1 span {
+    font-size: 30px;
+}
+}
+
+/* About */
+#about {
+    margin-top: 200px;
+}
+
+#about h2 {
+    font-size: 55px;
     text-align: center;
 }
 
-.row {
-    border: red 5px solid;
+#about img {
+    margin-top: 50px;
+    width: 400px;
+    float: left;
 }
 
-.col {
-    border: blue 5px solid;
+#about p {
+    margin-top: 50px;
+    margin-left: 50%;
 }
