--- a/style.css
+++ b/style.css
@@ -169,10 +169,14 @@ p {
 #about img {
     margin-top: 50px;
     width: 400px;
-    float: left;
+    min-width: 75%;
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 #about p {
     margin-top: 50px;
-    margin-left: 50%;
 }
