--- a/style.css
+++ b/style.css
@@ -4,18 +4,28 @@ html {
 }
 
 body {
-    background-color: #21314D;
+    background-color: #293241;
     color: #DCDCDC;
     font-family: "Noto Sans", sans-serif;
 }
 
-p {
-    font-family: "Lato", sans-serif;
-    color: #8d99ae;
+h2 {
+    font-size: 55px;
+    text-align: center;
 }
 
-.highlight {
-    color: #D2492A;
+p, ul {
+    font-family: "Lato", sans-serif;
+    color: #a5afc0;
+}
+
+a {
+    color: #ef233c;
+    transition: all 0.5s;
+}
+
+a:hover {
+    color: #ef233c;
 }
 
 /* Navigation Bar */
@@ -27,12 +37,12 @@ p {
 }
 
 .fab:hover {
-    color: #D2492A;
+    color: #ef233c;
     transform: scale(1.3);
 }
 
 .navbar {
-    background-color: #21314D;
+    background-color: #293241;
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -46,7 +56,7 @@ p {
 }
 
 .navbar-toggler:hover .icon-bar {
-    background-color: #D2492A;
+    background-color: #ef233c;
     transition: 0.5s;
 }
 
@@ -91,7 +101,7 @@ p {
 }
 
 .nav-link:hover {
-    color: #D2492A !important;
+    color: #ef233c !important;
     transform: scale(1.2);
 }
 
@@ -108,7 +118,7 @@ p {
 }
 
 #intro h1 span {
-    color: #8d99ae;
+    color: #a5afc0;
 }
 
 @media (min-width: 200px) {
@@ -158,12 +168,8 @@ p {
 
 /* About */
 #about {
-    margin-top: 200px;
-}
-
-#about h2 {
-    font-size: 55px;
-    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 300px;
 }
 
 #about img {
@@ -174,9 +180,23 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
 }
 
 #about p {
     margin-top: 50px;
+}
+
+/* Experience */
+#experience {
+    margin-bottom: 300px;
+}
+
+#experience p {
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* Projects */
+#projects {
+    margin-bottom: 300px;
 }
