--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ p, ul {
 
 a {
     color: #ef233c;
+    display: inline-block;
     transition: all 0.5s;
 }
 
@@ -32,7 +33,8 @@ a:hover {
 .fab {
     color: #DCDCDC;
     font-size: 30px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
     transition: all 0.5s;
 }
 
@@ -168,14 +170,15 @@ a:hover {
 
 /* About */
 #about {
-    margin-top: 100px;
-    margin-bottom: 300px;
+    margin-top: 70px;
+    padding-top: 80px;
+    margin-bottom: 220px;
 }
 
 #about img {
     margin-top: 50px;
     width: 400px;
-    min-width: 75%;
+    min-width: 250px;
     max-width: 100%;
     display: block;
     margin-left: auto;
@@ -186,9 +189,14 @@ a:hover {
     margin-top: 50px;
 }
 
+.skillsList {
+    padding-left: 0px;
+}
+
 /* Experience */
 #experience {
-    margin-bottom: 300px;
+    padding-top: 80px;
+    margin-bottom: 220px;
 }
 
 #experience p {
@@ -196,7 +204,43 @@ a:hover {
     text-align: center;
 }
 
-/* Projects */
-#projects {
+/* Work */
+#work {
+    padding-top: 80px;
+    margin-bottom: 220px;
+}
+
+#work p {
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* Contact */
+#contact {
+    padding-top: 80px;
     margin-bottom: 300px;
+}
+
+#contact p {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.form-group {
+    min-width: 325px;
+    width: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.form-group button {
+    background-color: #2a9d8f;
+    color: white;
+}
+
+.form-group button:hover {
+    background-color: #20796f;
+    color: white;
 }
