--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a:hover {
     background-color: #293241;
     padding-top: 20px;
     padding-bottom: 20px;
+    opacity: 0;
 }
 
 .navbar-toggler {
@@ -113,6 +114,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0;
 }
 
 #intro h1 {
